nullaway_error_AFEA021D-06A9-41E6-9439-A4001B62B8F5.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/persistenceunit/PersistenceManagedTypesBeanRegistrationAotProcessor.java:211: error: [NullAway] passing @Nullable parameter 'embeddableInstantiatorClass' where @NonNull is required
			reflection.registerType(embeddableInstantiatorClass, MemberCategory.INVOKE_DECLARED_CONSTRUCTORS);
			                        ^
    (see http://t.uber.com/nullaway )
